fix spacing

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -54,10 +54,15 @@ a, a:hover, a:visited {
 }
 
 #search {
+  margin-top: 10px;
   text-align: center;
 }
 
 #start {
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: center;
+}
+
+#output {
+  margin-top: 30px;
 }
